fix:- aligned whygg, subscribe sections

--- a/hospital.css
+++ b/hospital.css
@@ -143,32 +143,34 @@ input {
   width: 425px;
 }
 
-/* .whygg {
-  margin-top: 50px;
+.whygg {
+  margin-top: 150px;
   margin-left: 90px;
   background-color: #e8f9f6;
-  height: 500px;
+  height: 550px;
   width: 88%;
   display: flex;
   position: relative;
   overflow: hidden;
 }
 .staffwithbg {
-  flex: 2;
+  flex: 1.5;
 }
-.whyggcontent {
-  flex: 1;
-  padding-top: 150px;
-}
-.whyggcontent ul {
-  list-style-image: url(img/Group120check.png);
-}
-
 .staffwithbg img {
   object-fit: contain;
   position: absolute;
   margin-block-end: auto;
-} */
+}
+.whyggcontent {
+  flex: 1;
+  padding-top: 100px;
+}
+.whyggcontent ul {
+  list-style-image: url(img/Group120check.png);
+}
+.whyggcontent li{
+  margin-bottom: 20px;
+}
 
 .specialistpane {
   width: 88%;
@@ -223,6 +225,8 @@ input {
   width: 88%;
   margin-top: 200px;
   margin-left: 90px;
+  position: absolute;
+  z-index: 1;
 }
 .interesthead {
   text-align: center;
@@ -239,34 +243,37 @@ input {
   width: 425px;
 }
 
-/* .subscribewithbg {
+.bluebg {
   background-color: #eaf2ff;
-  height: 600px;
-  width: 100%;
   position: relative;
-  margin-top: -250px;
+  height: 670px;
+  width: 100.55%;
+  margin-top: 350px;
 }
 .subscribebox {
   height: 210px;
-  width: 90%;
+  width: 88%;
   overflow: hidden;
   background-color: white;
   display: flex;
   position: absolute;
-  margin-top: 300px;
-  margin-left: 70px;
+  z-index: 1;
+  top: 4200px;
+  left: 100px;
 }
 .textwithbg {
   flex: 1;
 }
 .textwithbg img {
   height: 210px;
-  width: 120%;
+  width: 150%;
+  position: relative;
 }
 .subscribetext {
-  position: relative;
-  margin-top: -150px;
-  margin-left: 70px;
+  position: absolute;
+  z-index: 1;
+  top: 60px;
+  left: 100px;
 }
 .formarea {
   flex: 1;
@@ -275,17 +282,20 @@ input {
 }
 .formarea input {
   border: none;
+  width: 300px;
 }
 .formarea button {
   height: 40px;
   width: 150px;
+  margin-right: 20px;
 }
 .formarea hr {
-  margin-top: -7px;
-  margin-right: 145px;
+  margin-top: -10px;
+  margin-right: 90px;
+  margin-left: 10px;
 }
 
-.footertop {
+/* .footertop {
   display: flex;
 }
 .footertopleft {
